--- a/project_view.html
+++ b/project_view.html
@@ -5,47 +5,48 @@
     <title>الفهرس الليبي الموحد</title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 5px; font-size: 11px; overflow-x: hidden; }
-        .project-bar { background: #2c3e50; color: #fff; padding: 5px 10px; display: flex; align-items: center; justify-content: space-between; border-radius: 4px; }
-        .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; background: #fff; padding: 6px; border: 1px solid #ccc; border-radius: 4px; margin-top: 2px; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 5px; font-size: 11px; }
+        .project-bar { background: #2c3e50; color: #fff; padding: 8px; display: flex; align-items: center; justify-content: space-between; border-radius: 4px; margin-bottom: 5px; }
+        .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; background: #fff; padding: 8px; border: 1px solid #ccc; border-radius: 4px; margin-top: 2px; }
         .grid-7 { grid-template-columns: repeat(7, 1fr); }
-        label { font-size: 10px; font-weight: bold; color: #555; text-align: center; display: block; }
-        input, select { width: 100%; border: 1px solid #bbb; padding: 2px; font-size: 11px; height: 22px; text-align: right; border-radius: 2px; box-sizing: border-box; }
-        .actions { margin: 5px 0; display: flex; gap: 4px; justify-content: center; }
+        label { font-size: 10px; font-weight: bold; color: #555; text-align: center; display: block; margin-bottom: 1px; }
+        input, select { width: 100%; border: 1px solid #bbb; padding: 2px 4px; font-size: 11px; height: 22px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #fdfdfd; }
+        .actions { margin: 5px 0; display: flex; gap: 4px; flex-wrap: wrap; justify-content: center; }
         .btn { padding: 4px 10px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-weight: bold; font-size: 10px; }
         .btn-save { background: #27ae60; } .btn-smart { background: #f39c12; }
-        .preview-table { width: 100%; border-collapse: collapse; background: #fff; border: 1px solid #ccc; table-layout: fixed; }
+        .preview-table { width: 100%; border-collapse: collapse; background: #fff; margin-top: 5px; border: 1px solid #ccc; }
         .preview-table th { background: #f2f2f2; padding: 4px; border: 1px solid #ccc; font-size: 10px; }
-        .preview-table td { border: 1px solid #ccc; padding: 2px 4px; text-align: right; font-size: 10px; overflow: hidden; text-overflow: ellipsis; }
-        .btn-t { padding: 1px 4px; font-size: 9px; cursor: pointer; border: 1px solid #ccc; background: #fff; }
-        #smartBox { display:none; position:fixed; top:20%; left:50%; transform:translateX(-50%); background:white; border:2px solid #2c3e50; padding:10px; z-index:9999; box-shadow:0 0 20px rgba(0,0,0,0.5); width:400px; }
+        .preview-table td { border: 1px solid #ccc; padding: 3px; text-align: right; font-size: 10px; }
+        .action-cell { display: flex; gap: 3px; justify-content: center; width: 90px; }
+        .btn-t { padding: 2px 5px; font-size: 9px; cursor: pointer; border-radius: 2px; border: 1px solid #ccc; background: #f8f9fa; }
+        #smartModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:2000; width:450px; box-shadow: 0 5px 25px rgba(0,0,0,0.4); border-radius:8px; }
     </style>
 </head>
 <body>
 
 <div class="project-bar">
     <div><strong>الفهرس الليبي الموحد</strong> | <span id="activeProjectLabel"></span></div>
-    <div style="display:flex; gap:5px;">
-        <button onclick="document.getElementById('smartBox').style.display='block'" class="btn btn-smart">⚡ إدخال ذكي</button>
+    <div style="display:flex; gap:8px;">
+        <button onclick="document.getElementById('smartModal').style.display='block'" class="btn btn-smart">⚡ إدخال ذكي</button>
         <button onclick="createNewProject()" class="btn btn-save" style="background:#2980b9">+ جديد</button>
-        <select id="projSelect" onchange="switchProject(this.value)" style="width:auto; height:20px;"></select>
+        <select id="projSelect" onchange="switchProject(this.value)" style="height:20px; font-size:10px;"></select>
     </div>
 </div>
 
-<div id="smartBox">
-    <label>ألصق النص المراد توزيعه:</label>
-    <textarea id="smartInput" style="width:100%; height:80px; margin-top:5px;"></textarea>
-    <div style="margin-top:5px; text-align:left;">
-        <button onclick="processSmart()" class="btn btn-save">توزيع</button>
-        <button onclick="document.getElementById('smartBox').style.display='none'" class="btn" style="background:#666">إلغاء</button>
+<div id="smartModal">
+    <h3 style="margin:0 0 10px 0;">توزيع النص آلياً</h3>
+    <textarea id="smartInput" style="width:100%; height:100px; padding:5px; border:1px solid #ccc; font-size:12px;" placeholder="ألصق النص هنا (مؤلف. عنوان. مكان: ناشر، سنة)"></textarea>
+    <div style="margin-top:10px; display:flex; gap:5px;">
+        <button class="btn btn-save" onclick="processSmart()">توزيع</button>
+        <button class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
     </div>
 </div>
 
 <form id="biblioForm">
     <div class="compact-grid">
-        <div><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subs"></div>
-        <div><label>إحالة انظر</label><input type="text" id="see" class="in" list="subs"></div>
-        <div><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subs"></div>
+        <div><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subjectsList"></div>
+        <div><label>إحالة انظر</label><input type="text" id="see" class="in" list="subjectsList"></div>
+        <div><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subjectsList"></div>
         <div><label>المؤلف</label><input type="text" id="author" class="in"></div>
         <div><label>العنوان</label><input type="text" id="title" class="in"></div>
         <div><label>المشاركون</label><input type="text" id="collab" class="in"></div>
@@ -69,97 +70,104 @@
     </div>
 </form>
 
-<datalist id="subs"></datalist>
+<datalist id="subjectsList"></datalist>
 
 <div class="actions">
-    <button class="btn btn-save" onclick="saveData()">حفظ السجل (Enter)</button>
-    <button class="btn" style="background:#8e44ad" onclick="previewFull()">المعاينة</button>
-    <button class="btn" style="background:#2980b9" onclick="exportToExcel()">تصدير Excel</button>
-    <button class="btn" style="background:#555" onclick="openIndex('author')">كشاف المؤلفين</button>
-    <button class="btn" style="background:#d43f3a" onclick="openIndex('title')">كشاف العناوين</button>
+    <button class="btn btn-save" onclick="saveData()">حفظ السجل</button>
+    <button class="btn" style="background:#2980b9" onclick="exportToExcel()">Excel</button>
+    <button class="btn" style="background:#8e44ad" onclick="previewFullList()">المعاينة</button>
+    <button class="btn" style="background:#555" onclick="previewIndex('author')">كشاف المؤلفين</button>
+    <button class="btn" style="background:#d43f3a" onclick="previewIndex('title')">كشاف العناوين</button>
+    <button class="btn" style="background:#555" onclick="previewIndex('collab')">كشاف المترجمين</button>
+    <button class="btn" style="background:#d43f3a" onclick="previewIndex('orig_title')">العنوان الأصلي</button>
 </div>
 
 <table class="preview-table">
-    <thead><tr><th style="width:25px">ت</th><th style="width:20%">رأس الموضوع</th><th>البيان الببليوغرافي</th><th style="width:75px">الإجراء</th></tr></thead>
+    <thead><tr><th style="width:30px">ت</th><th style="width:25%">رأس الموضوع</th><th>البيان الببليوغرافي</th><th style="width:95px">الإجراء</th></tr></thead>
     <tbody id="tableBody"></tbody>
 </table>
 
 <script>
-let projects = JSON.parse(localStorage.getItem('lib_projs')) || ['تجربة 1'];
-let currentProj = localStorage.getItem('lib_active') || 'تجربة 1';
+let projects = JSON.parse(localStorage.getItem('lib_proj_list')) || ['المشروع_1'];
+let currentProj = localStorage.getItem('lib_active_proj') || 'المشروع_1';
 let records = JSON.parse(localStorage.getItem('recs_' + currentProj)) || [];
 let editIdx = -1;
 
+const cln = (s) => s ? s.trim().replace(/^ال(?=[^ل])/, "").replace(/[أإآ]/g, "ا").replace(/ى/g, "ي") : "";
+
 function processSmart() {
-    let txt = document.getElementById('smartInput').value;
-    let p = txt.split('.');
-    if(p[0]) document.getElementById('author').value = p[0].trim();
-    if(p[1]) document.getElementById('title').value = p[1].trim();
-    if(p[2] && p[2].includes(':')) {
-        let imp = p[2].split(':');
+    let raw = document.getElementById('smartInput').value;
+    let parts = raw.split('.');
+    if(parts[0]) document.getElementById('author').value = parts[0].trim();
+    if(parts[1]) document.getElementById('title').value = parts[1].trim();
+    if(parts[2] && parts[2].includes(':')) {
+        let imp = parts[2].split(':');
         document.getElementById('place').value = imp[0].trim();
         if(imp[1].includes('،')) {
-            let n = imp[1].split('،');
-            document.getElementById('publisher').value = n[0].trim();
-            document.getElementById('year').value = n[1].replace(/\D/g,'');
+            let p = imp[1].split('،');
+            document.getElementById('publisher').value = p[0].trim();
+            document.getElementById('year').value = p[1].replace(/\D/g,'');
         }
     }
-    document.getElementById('smartBox').style.display='none';
+    document.getElementById('smartModal').style.display = 'none';
 }
 
 function saveData() {
     let d = {}; document.querySelectorAll('.in').forEach(i => d[i.id] = i.value.trim());
     if(!d.subject) return alert("الرأس مطلوب");
     if(editIdx > -1) records[editIdx] = d; else records.push(d);
-    editIdx = -1; 
-    records.sort((a,b) => a.subject.replace(/^ال/,'').localeCompare(b.subject.replace(/^ال/,''), 'ar'));
-    updateUI(); document.getElementById('biblioForm').reset();
+    editIdx = -1; sortRecs(); updateUI(); document.getElementById('biblioForm').reset();
 }
+
+function sortRecs() { records.sort((a,b) => cln(a.subject).localeCompare(cln(b.subject), 'ar')); }
 
 function updateUI() {
     localStorage.setItem('recs_'+currentProj, JSON.stringify(records));
-    let h = ''; let s = 1; let sb = new Set();
+    let h = ''; let s = 1; let subs = new Set();
     records.forEach((r, i) => {
-        sb.add(r.subject);
-        let isRef = !!r.see;
+        subs.add(r.subject);
+        let isSee = !!r.see;
         h += `<tr>
-            <td style="text-align:center">${isRef ? '--' : (r.title ? s++ : '--')}</td>
+            <td>${isSee ? '--' : (r.title ? s++ : '--')}</td>
             <td><strong>${r.subject}</strong>${r.see?'<br>انظر: '+r.see:''}${r.see_also?'<br><small>انظر أيضا: '+r.see_also+'</small>':''}</td>
             <td>${r.title ? `<b>${r.author}</b>. ${r.title}. - ${r.place}: ${r.publisher}, ${r.year}.` : ''}</td>
-            <td><div style="display:flex;gap:2px;"><button class="btn-t" onclick="editRec(${i})">تعديل</button><button class="btn-t" style="color:red" onclick="delRec(${i})">حذف</button></div></td>
+            <td class="action-cell">
+                <button class="btn-t" onclick="editRec(${i})">تعديل</button>
+                <button class="btn-t" style="color:red" onclick="deleteRec(${i})">حذف</button>
+            </td>
         </tr>`;
     });
     document.getElementById('tableBody').innerHTML = h;
-    document.getElementById('subs').innerHTML = Array.from(sb).map(x=>`<option value="${x}">`).join('');
-    document.getElementById('projSelect').innerHTML = projects.map(p=>`<option ${p===currentProj?'selected':''}>${p}</option>`).join('');
+    document.getElementById('subjectsList').innerHTML = Array.from(subs).map(x => `<option value="${x}">`).join('');
+    document.getElementById('projSelect').innerHTML = projects.map(p => `<option ${p===currentProj?'selected':''}>${p}</option>`).join('');
     document.getElementById('activeProjectLabel').innerText = currentProj;
 }
 
-function openIndex(type) {
+function previewIndex(type) {
     let win = window.open();
-    let map = {}; let s = 1;
+    let map = {}; let serialCounter = 1;
     records.forEach(r => {
         if(r.title) {
             let val = r[type] || "";
             val.split('؛').forEach(v => {
-                v = v.trim(); if(v) { if(!map[v]) map[v]=[]; map[v].push(s); }
+                v = v.trim(); if(v) { if(!map[v]) map[v]=[]; map[v].push(serialCounter); }
             });
-            s++;
+            serialCounter++;
         }
     });
-    let c = `<div dir="rtl" style="padding:1in; font-family:Arial;"><h3>كشاف ${type==='author'?'المؤلفين':'العناوين'}</h3>`;
-    Object.keys(map).sort((a,b)=>a.replace(/^ال/,'').localeCompare(b.replace(/^ال/,''),'ar')).forEach(k => {
-        c += `<p>${k} <b>(${map[k].join(', ')})</b></p>`;
+    let c = `<div dir="rtl" style="padding:1in; font-family:Arial; font-size:12px;"><h2>كشاف ${type}</h2>`;
+    Object.keys(map).sort((a,b)=>cln(a).localeCompare(cln(b),'ar')).forEach(k => {
+        c += `<div style="border-bottom:1px solid #eee; padding:5px;">${k} <span style="float:left"><b>(${map[k].join(', ')})</b></span><div style="clear:both"></div></div>`;
     });
     win.document.write(c + `</div>`);
 }
 
 function editRec(i) { editIdx = i; Object.keys(records[i]).forEach(k => { if(document.getElementById(k)) document.getElementById(k).value = records[i][k]; }); }
-function delRec(i) { if(confirm("حذف؟")) { records.splice(i,1); updateUI(); } }
-function previewFull() { /* نفس دالة المعاينة السابقة */ }
-function exportToExcel() { /* نفس دالة التصدير السابقة */ }
-function switchProject(v) { localStorage.setItem('lib_active', v); location.reload(); }
-function createNewProject() { let n = prompt("الاسم:"); if(n){ projects.push(n); localStorage.setItem('lib_projs', JSON.stringify(projects)); switchProject(n); }}
+function deleteRec(i) { if(confirm("حذف؟")) { records.splice(i,1); updateUI(); } }
+function switchProject(v) { localStorage.setItem('lib_active_proj', v); location.reload(); }
+function createNewProject() { let n = prompt("الاسم:"); if(n){ projects.push(n); localStorage.setItem('lib_proj_list', JSON.stringify(projects)); switchProject(n); }}
+function exportToExcel() { const ws = XLSX.utils.json_to_sheet(records); const wb = XLSX.utils.book_new(); XLSX.utils.book_append_sheet(wb, ws, "Records"); XLSX.writeFile(wb, `${currentProj}.xlsx`); }
+function previewFullList() { /* دالة المعاينة */ }
 
 window.onload = updateUI;
 </script>
